--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: hsl(257, 40%, 49%);
     background-image: url("../images/bg-desktop.svg");
+    background-repeat: no-repeat;
     color: #fff;
     font-family: 'Open Sans', sans-serif;
     max-width: 100%;
