--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,8 @@ main {
     margin: 30px 0 30px 0;
     font-size: 1.1rem;
     font-weight: 400;
+    line-height: 28px;
+    max-width: 600px;*/
 }
 
 .info .register {
